--- a/main.css
+++ b/main.css
@@ -1,3 +1,10 @@
 .hidden{
     display: none;
 }
+.todo-status{
+    padding: 10px;
+    background: whitesmoke;
+}
+.completed{
+    background: lightgreen;
+}
