--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
-.hidden{
+.hidden,
+#todo-template{
     display: none;
 }
 .todo-status{
@@ -8,3 +9,4 @@
 .completed{
     background: lightgreen;
 }
+
